# thrift_rpc_code_generate

./: CMakeLists.txt  README.md  setup.py  text1.thrift
pybind11/tools/: pybind11Tools.cmake
src/thrift/: main.cc  thrift_generate.cpp  thrifty.yy
src/thrift/generate/: t_py_generator.cc
